--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
     "@tailwindcss/typography": "^0.5.2",
     "autoprefixer": "^10.4.4",
     "clsx": "^1.1.1",
+    "copy-to-clipboard": "^3.3.1",
     "docusaurus-plugin-sass": "^0.2.2",
     "postcss": "^8.4.12",
     "prism-react-renderer": "^1.3.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "sass": "^1.50.0",
+    "save": "^2.5.0",
     "tailwindcss": "^3.0.23"
   },
   "devDependencies": {
