--- a/news/authors.yml
+++ b/news/authors.yml
@@ -18,6 +18,6 @@ r0ckgh0st:
 
 ban:
   name: ban
-  title: '#yzbban.eth'
+  title: 'yzbban.eth'
   image_url: /img/team/ban.png
   url: https://twitter.com/yzbban
